feat: create users api

--- a/server/jsconfig.json
+++ b/server/jsconfig.json
@@ -14,6 +14,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/students/route.js", "src/app.js"],
   "exclude": ["node_modules"]
 }
