--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +13,19 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "puppeteer": "^21.6.1",
+    "sequelize": "^6.35.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/pg": "^8.10.9",
     "nodemon": "^3.0.2",
+    "sequelize-cli": "^6.6.2",
     "typescript": "^5.3.3"
   }
 }
