--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
     "sequelize": "^6.35.2",
