--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "amqplib": "^0.10.3",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
@@ -21,6 +22,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
     "sequelize": "^6.35.2",
