--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "node src/app.js"
   },
   "keywords": [],
   "author": "",
