Update development.env file

--- a/server/development.env
+++ b/server/development.env
@@ -1,9 +1,9 @@
-POSTGRES_USERNAME=myat
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=webscraping
-DATABASE_HOST=localhost
-DATABASE_TYPE=postgres
+DB_USERNAME=myat
+DB_PASSWORD=
+DB_NAME=webscraping
+DB_HOST=localhost
+DB_DIALECT=postgres
 SALT_ROUND=10
 JWT_SECRET_KEY=secret
-JWT_EXPIRES_IN=7days
+JWT_EXPIRES_IN=7d
 PORT=4000
