--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/pg": "^8.10.9",
     "chai": "^4.3.10",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
     "sinon": "^17.0.1",
