fix: database migration issue (config.js)

--- a/server/development.env
+++ b/server/development.env
@@ -1,5 +1,5 @@
 DB_USERNAME=myat
-DB_PASSWORD=
+DB_PASSWORD=postgres
 DB_NAME=webscraping
 DB_HOST=localhost
 DB_DIALECT=postgres
@@ -7,3 +7,4 @@ SALT_ROUND=10
 JWT_SECRET_KEY=secret
 JWT_EXPIRES_IN=7d
 PORT=4000
+NODE_ENV=development
