--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "db:create": "npx sequelize-cli db:create",
     "db:drop": "npx sequelize-cli db:drop",
     "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
     "test": "mocha tests/**/*.js"
   },
   "keywords": [],
