--- a/server/package.json
+++ b/server/package.json
@@ -30,15 +30,12 @@
     "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
     "sequelize": "^6.35.2",
-    "ts-node": "^10.9.2"
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "@types/pg": "^8.10.9",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
-    "sequelize-cli": "^6.6.2",
-    "sinon": "^17.0.1",
-    "typescript": "^5.3.3"
+    "sinon": "^17.0.1"
   }
 }
